_includes/manuals/1.11/4.3.4_smartproxy_dhcp.md

Activate the DHCP management module within the Smart Proxy instance. This is used to query for available IP addresses (looking at existing leases and reservations), add new and delete existing reservations. It cannot manage subnet declarations, which should be managed by another means (e.g. [puppet-dhcp](https://github.com/theforeman/puppet-dhcp)).

The DHCP module is capable of managing the ISC DHCP server, Microsoft Active Directory and Libvirt instances.

Builtin providers are:

* `dhcp_isc` - ISC DHCP server over OMAPI
* `dhcp_ms_native` - Microsoft Active Directory using netsh
* `dhcp_libvirt` - dnsmasq DHCP via libvirt API

Extra providers are available as plugins and can be installed through packages. See the following pages for more information:

* [List of smart proxy plugins](http://projects.theforeman.org/projects/foreman/wiki/List_of_Smart-Proxy_Plugins)
* [Plugin installation documentation]({{ site.baseurl }}plugins/)

To enable the DHCP module and enable a provider, `dhcp.yml` must contain:

    :enabled: https
    :use_provider: dhcp_isc

For providers from plugins, check the plugin documentation to determine the exact provider name.

The module manages a DHCP server on the local host by default, but for providers that can be run remotely, the server address can be changed:

    :server: 127.0.0.1

Note that if the DHCP server is running remotely, some providers (notably ISC) require that the configuration files must be accessible to the Smart Proxy still. This can be achieved with a network file system, e.g. NFS.

All available subnets will be loaded and can be managed by default, but this can have a performance penalty. If only some subnets are used, specify them as follows in `network_address/network_mask` notation:

    :subnets: [192.168.205.0/255.255.255.128, 192.168.205.128/255.255.255.128]

Each provider has its own configuration file in the same directory with its own settings, e.g. `dhcp_isc.yml`. This usually needs additional configuration after changing the `use_provider` setting.

#### dhcp_isc

The dhcp_isc provider uses a combination of the ISC DHCP server OMAPI management interface and parsing of configuration and lease files. This requires it to be run either on the same host as the DHCP server or to have network filesystem access to these files.

This provider requires the `config` and `leases` settings in the `dhcp_isc.yml` configuration file, which should be set to the location of the DHCP server config and lease files. On a Red Hat or Fedora server use:

    :config: /etc/dhcp/dhcpd.conf
    :leases: /var/lib/dhcpd/dhcpd.leases

On a Debian or Ubuntu DHCP server, use the following values instead:

    :dhcp_config: /etc/dhcp3/dhcpd.conf
    :dhcp_leases: /var/lib/dhcp3/dhcpd.leases

<div class="alert alert-info">The foreman-proxy account must be able to read both configuration files. In particular, check the permissions on the parent directory (e.g. /etc/dhcp) permit world read/execute.</div>

If the DHCP server is secured with an "omapi_key", the following entries must be set with the same values:

    :key_name: omapi_key
    :key_secret: XXXXXXXX

If the DHCP server is listening on a non-standard OMAPI port (i.e. not 7911), then change this with:

    :omapi_port: 7911

For DHCP servers running on a different host, change `:server` in the main `dhcp.yml` configuration file.

#### dhcp_ms_native

The ms_native provider manages reservations in Microsoft Active Directory by running the "netsh" command.

It has no configuration options in `dhcp_ms_native.yml`.

#### dhcp_libvirt

Provider that manages reservations and leases via dnsmasq through libvirt API.
It uses ruby-libvirt gem to connect to the local or remote instance of libvirt
daemon.

Possible configuration options in `dhcp_virsh.yml` are:

    # Libvirt network. Only one network is supported.
    :network: default

    # Libvirt connection. Make sure proxy effective user have permission to connect.
    :url: qemu:///system

When configuring local or remote connections, make sure the `foreman-proxy`
effective user have UNIX permissions to libvirt socket or ssh keys are
deployed when using remote connection.

More information about using this provider is in the [Libvirt section]({{ site.baseurl }}manuals/{{ page.version }}/index.html#4.3.11Libvirt).
